# Agri-Smart

./: README.md  app.py  crop_recommendation.py  data_visualization.py  disease_identification.py  pyproject.toml  utils.py
.streamlit/: config.toml
assets/: custom.css
attached_assets/: Pasted-import-streamlit-as-st-from-streamlit-option-menu-import-option-menu-import-pandas-as-pd-from-uti-1743517008151.txt  Pasted-import-streamlit-as-st-import-plotly-express-as-px-import-plotly-graph-objects-as-go-def-render-1743517733093.txt  crop_dataset.csv
models/: crop_recommendation_model.pkl
